Add dependence puppeteer

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,8 +10,10 @@
     "start:production": "node ../../dist/server/src/server.js"
   },
   "dependencies": {
+    "@types/puppeteer": "^5.4.2",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "puppeteer": "^5.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.8",
