--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/puppeteer": "^5.4.2",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "puppeteer": "^5.5.0"
   },
