Change alias name of commons for common

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -13,7 +13,7 @@
       "@entities/*": ["./src/entities/*"],
       "@repositories/*": ["./src/repositories/*"],
       "@providers/*": ["./src/providers/*"],
-      "@commons/*": ["./src/commons/*"]
+      "@common/*": ["./src/common/*"]
     }
   },
   "include": [
