--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,6 +1,13 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "target": "es2017",
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ES6",
+      "es2017"
+    ],
     "outDir": "../../dist/server", 
     "rootDir": "./src", 
     "removeComments": true,
