Add alias @http on tsconfig

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -20,7 +20,8 @@
       "@entities/*": ["./src/entities/*"],
       "@repositories/*": ["./src/repositories/*"],
       "@providers/*": ["./src/providers/*"],
-      "@common/*": ["./src/common/*"]
+      "@common/*": ["./src/common/*"],
+      "@http/*": ["./src/http/*"]
     }
   },
   "include": [
