--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -21,7 +21,8 @@
       "@repositories/*": ["./src/repositories/*"],
       "@providers/*": ["./src/providers/*"],
       "@common/*": ["./src/common/*"],
-      "@http/*": ["./src/http/*"]
+      "@http/*": ["./src/http/*"],
+      "@errors/*": ["./src/errors/*"]
     }
   },
   "include": [
