--- a/package.json
+++ b/package.json
@@ -16,18 +16,21 @@
     "start:mobile:development": "expo start packages/mobile"
   },
   "dependencies": {
-    "@animes-united/eslint-config": "*",
-    "@animes-united/axios-config": "*"
+    "@animes-united/axios-config": "*",
+    "@animes-united/eslint-config": "*"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
+    "@types/jest": "^26.0.19",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
+    "jest": "^26.6.3",
     "lerna": "^3.22.1",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
   }
 }
