--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     ]
   },
   "scripts": {
+    "test": "jest",
     "build:server": "babel packages/server/src --extensions \".js,.ts\" --out-dir dist/server --copy-files --no-copy-ignored",
     "start:server:production": "node dist/server/server.js",
     "start:mobile:development": "expo start packages/mobile"
