--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
+    "@types/mongodb": "^3.6.3",
     "@types/puppeteer": "^5.4.2",
     "ts-node-dev": "^1.0.0",
     "tsconfig-paths": "^3.9.0"
