--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest": "^26.6.3",
     "lerna": "^3.22.1",
     "ts-jest": "^26.4.4",
+    "tsconfig-paths-jest": "^0.0.1",
     "typescript": "^4.1.2"
   }
 }
