Add flag detectOpenHandles on script test:watch and test

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     ]
   },
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "jest --detectOpenHandles",
+    "test:watch": "jest --watch --detectOpenHandles",
     "build:server": "babel packages/server/src --extensions \".js,.ts\" --out-dir dist/server --copy-files --no-copy-ignored",
     "start:server:production": "node dist/server/server.js",
     "start:mobile:development": "expo start packages/mobile"
