--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,8 +23,7 @@
     "@types/puppeteer": "^5.4.2",
     "@types/supertest": "^2.0.10",
     "supertest": "^6.0.1",
-    "ts-node-dev": "^1.0.0",
-    "tsconfig-paths": "^3.9.0"
+    "ts-node-dev": "^1.0.0"
   },
   "private": true
 }
