Add paths for @components

--- a/packages/mobile/tsconfig.json
+++ b/packages/mobile/tsconfig.json
@@ -8,6 +8,9 @@
     "moduleResolution": "node",
     "noEmit": true
   },
+  "paths": {
+    "@components/*": ["./src/components/*"]
+  },
   "include": [
     "src/**/*"
   ]
