--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "__generated__/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo -r tsconfig-paths/register start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -12,10 +12,15 @@
     "postinstall": "expo-yarn-workspaces postinstall"
   },
   "dependencies": {
+    "@expo-google-fonts/nunito": "^0.1.0",
+    "@expo-google-fonts/poppins": "^0.1.0",
+    "@expo-google-fonts/ubuntu": "^0.1.0",
     "@expo/vector-icons": "^10.0.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
     "expo": "~39.0.2",
+    "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "expo-yarn-workspaces": "^1.2.1",
     "react": "16.13.1",
@@ -25,6 +30,7 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1 ",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.2.1"
   },
@@ -33,7 +39,8 @@
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
-    "@types/styled-components": "^5.1.7",
+    "@types/react-native-vector-icons": "^6.4.6",
+    "@types/styled-components-react-native": "^5.1.0",
     "babel-preset-expo": "^8.3.0"
   },
   "private": true
