--- a/packages/mobile/app.json
+++ b/packages/mobile/app.json
@@ -21,7 +21,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "backgroundColor": "#FFFFFF"
+        "backgroundColor": "#0c0c0c"
       }
     }
   }
