--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "__generated__/AppEntry.js",
   "scripts": {
-    "start": "expo -r tsconfig-paths/register start",
+    "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
