--- a/packages/mobile/tsconfig.json
+++ b/packages/mobile/tsconfig.json
@@ -2,14 +2,17 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/mobile",
+    "rootDir": "./src", 
+    "baseUrl": ".",
     "allowSyntheticDefaultImports": true,
     "jsx": "react-native",
     "lib": ["dom", "esnext"],
     "moduleResolution": "node",
-    "noEmit": true
-  },
-  "paths": {
-    "@components/*": ["./src/components/*"]
+    "noEmit": true,
+    "paths": {
+      "@components/*": ["./src/components/*"],
+      "@assets/*": ["./src/assets/*"]
+    },
   },
   "include": [
     "src/**/*"
