--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -14,6 +14,7 @@
     "experimentalDecorators": true, 
     "emitDecoratorMetadata": true, 
     "forceConsistentCasingInFileNames": true,
+    "strictPropertyInitialization": false,
     "baseUrl": ".",
     "paths": {
       "@useCases/*": ["./src/useCases/*"],
