--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo-google-fonts/nunito": "^0.1.0",
     "@expo-google-fonts/poppins": "^0.1.0",
+    "@expo-google-fonts/roboto": "^0.1.0",
     "@expo-google-fonts/ubuntu": "^0.1.0",
     "@expo/vector-icons": "^10.0.0",
     "@react-native-community/masked-view": "^0.1.10",
