--- a/packages/shared/lintcommit-config/package.json
+++ b/packages/shared/lintcommit-config/package.json
@@ -11,7 +11,6 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "commitlint-config-monorepo": "^1.0.2",
-    "husky": "^4.3.8"
+    "commitlint-config-monorepo": "^1.0.2"
   }
 }
