feat(server): add path @adapters

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -17,6 +17,8 @@
     "strictPropertyInitialization": false,
     "baseUrl": ".",
     "paths": {
+      "@adapters/*": ["./src/adapters/*"],
+      "@adapters": ["./src/adapters/index.ts"],
       "@useCases/*": ["./src/useCases/*"],
       "@entities/*": ["./src/entities/*"],
       "@entities": ["./src/entities/index.ts"],
