--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -32,6 +32,7 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1 ",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.2.1"
@@ -43,6 +44,7 @@
     "@types/react-native": "~0.63.2",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/styled-components-react-native": "^5.1.0",
+    "react-native-svg-transformer": "^0.14.3",
     "babel-preset-expo": "^8.3.0"
   },
   "private": true
