--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -44,8 +44,8 @@
     "@types/react-native": "~0.63.2",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/styled-components-react-native": "^5.1.0",
-    "react-native-svg-transformer": "^0.14.3",
-    "babel-preset-expo": "^8.3.0"
+    "babel-preset-expo": "^8.3.0",
+    "react-native-svg-transformer": "^0.14.3"
   },
   "private": true
 }
