feat(global): strictPropertyInitialization to false

--- a/packages/mobile/tsconfig.json
+++ b/packages/mobile/tsconfig.json
@@ -9,6 +9,7 @@
     "lib": ["dom", "esnext"],
     "moduleResolution": "node",
     "noEmit": true,
+    "strictPropertyInitialization": false,
     "paths": {
       "@components/*": ["./src/components/*"],
       "@components": ["./src/components/index.tsx"],
