--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,6 +23,7 @@
     "@types/mongodb": "^3.6.3",
     "@types/puppeteer": "^5.4.2",
     "@types/supertest": "^2.0.10",
+    "sucrase": "^3.17.1",
     "supertest": "^6.0.1",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.0.0"
