feat(repo): add @sucrase/jest-plugin and @animes-united/jest-config

--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
   },
   "devDependencies": {
     "@animes-united/eslint-config": "*",
-    "@animes-united/lintcommit-config": "*",
-    "@animes-united/lint-staged-config": "*",
     "@animes-united/husky-config": "*",
+    "@animes-united/jest-config": "*",
+    "@animes-united/lint-staged-config": "*",
+    "@animes-united/lintcommit-config": "*",
     "@babel/cli": "^7.12.8",
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
+    "@sucrase/jest-plugin": "^2.0.0",
     "@types/jest": "^26.0.19",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "^8.2.2",
