--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         run: yarn install:ci
 
       - name: Building...
-        run: yarn build
+        run: yarn lerna:build
 
       - name: Run tests
         run: yarn test
