--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "babel src --extensions \".js,.ts\" --out-dir ../../dist/server --copy-files --no-copy-ignored",
+    "build:babel": "babel src --extensions \".js,.ts\" --out-dir ../../dist/server --copy-files --no-copy-ignored",
+    "build": "rimraf dist && sucrase ./src -d ./dist --transforms typescript,imports",
     "start:development": "ts-node -r tsconfig-paths/register --transpile-only src/server.ts",
     "start:development:watch": "tsnd -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
     "start:production": "node ../../dist/server/src/server.js"
