--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Run tests
         run: yarn test
+        env:
+          MONGODB_URI_TEST: ${{ secrects.MONGODB_URI_TEST }}
 
   deploy-development:
     runs-on: ubuntu-latest
