chore(repo): add flat `--forceExit` in test:staged script

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "install:ci": "yarn install --fronzen-lockfile",
     "test": "jest --passWithNoTests --no-cache --runInBand --detectOpenHandles",
     "test:watch": "yarn test --watch",
-    "test:staged": "yarn test --bail --findRelatedTests",
+    "test:staged": "yarn test --bail --findRelatedTests --forceExit",
     "test:ci": "yarn test --coverage",
     "build:server": "babel packages/server/src --extensions \".js,.ts\" --out-dir dist/server --copy-files --no-copy-ignored",
     "start:server:production": "node dist/server/server.js",
