--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -2,17 +2,12 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "target": "es2017",
-    "lib": [
-      "DOM",
-      "DOM.Iterable",
-      "ES6",
-      "es2017"
-    ],
-    "outDir": "../../dist/server", 
-    "rootDir": "./src", 
+    "lib": ["DOM", "DOM.Iterable", "ES6", "es2017"],
+    "outDir": "../../dist/server",
+    "rootDirs": ["./src", "./__tests__"],
     "removeComments": true,
-    "experimentalDecorators": true, 
-    "emitDecoratorMetadata": true, 
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true,
     "strictPropertyInitialization": false,
     "baseUrl": ".",
@@ -28,7 +23,7 @@
       "@errors/*": ["./src/errors/*"]
     }
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*", "__tests__/**/*"],
+  "exclude": ["node_modules/**/*"]
 }
+
