--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,11 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
 
+      - name: install puppeteer libraries
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgbm1
+
       - name: Install dependencies
         run: yarn install:ci
 
