chore(hash-generator): add flag `--forceExit` on script test

--- a/packages/shared/hash-generator/package.json
+++ b/packages/shared/hash-generator/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "sucrase ./src -d ./dist --transforms typescript,imports",
-    "test": "jest --passWithNoTests --no-cache --runInBand --detectOpenHandles --colors",
+    "test": "jest --passWithNoTests --no-cache --runInBand --detectOpenHandles --colors --forceExit",
     "test:ci": "yarn test --coverage"
   }
 }
