--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   },
   "scripts": {
     "install:ci": "yarn install --fronzen-lockfile",
-    "test": "jest --passWithNoTests --no-cache --runInBand --detectOpenHandles",
     "test:watch": "yarn test --watch",
     "test:staged": "yarn test --bail --findRelatedTests --forceExit",
     "test:ci": "yarn test --coverage",
     "build:server": "babel packages/server/src --extensions \".js,.ts\" --out-dir dist/server --copy-files --no-copy-ignored",
     "start:server:production": "node dist/server/server.js",
     "start:mobile:development": "expo start packages/mobile",
-    "lerna:build": "rimraf ./packages/**/dist && lerna run build"
+    "lerna:build": "rimraf ./packages/**/dist && lerna run build",
+    "lerna:test": "lerna run test"
   },
   "dependencies": {
     "@animes-united/axios-config": "*",
