chore(repo): remove command run and add command with args

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,10 +32,11 @@ jobs:
 
       - name: Install dependencies
         uses: mujo-code/puppeteer-headful@master
-        run: yarn install:ci
         env:
           CI: 'true'
           PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
+        with:
+          args: yarn install:ci
 
       - name: Building...
         run: yarn lerna:build
