--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
         uses: mujo-code/puppeteer-headful@master
         env:
           CI: 'true'
+          PUPPETEER_PRODUCT: 'firefox'
           PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
         with:
           args: yarn install:ci
