--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "scripts": {
     "install:ci": "yarn install --fronzen-lockfile",
-    "test:watch": "yarn test --watch",
-    "test:staged": "yarn test --bail --findRelatedTests --forceExit",
+    "test:watch": "yarn jest --watch",
+    "test:staged": "yarn jest --bail --findRelatedTests --forceExit",
     "test:ci": "yarn test --coverage",
     "build:server": "babel packages/server/src --extensions \".js,.ts\" --out-dir dist/server --copy-files --no-copy-ignored",
     "start:server:production": "node dist/server/server.js",
