--- a/packages/mobile/tsconfig.json
+++ b/packages/mobile/tsconfig.json
@@ -11,7 +11,7 @@
     "noEmit": true,
     "strictPropertyInitialization": false,
     "paths": {
-      "@presentations/atoms": ["./src/presentations/atoms/index.ts"],
+      "@presentation/atoms": ["./src/presentation/atoms/index.ts"],
       "@components/*": ["./src/components/*"],
       "@components": ["./src/components/index.tsx"],
       "@screens/*": ["./src/screens/*"],
