--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -44,6 +44,7 @@
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
     "@types/react-native-vector-icons": "^6.4.6",
+    "@types/react-native-video": "^5.0.4",
     "@types/styled-components-react-native": "^5.1.0",
     "babel-preset-expo": "^8.3.0",
     "react-native-svg-transformer": "^0.14.3"
