--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo": "~39.0.2",
+    "expo-av": "^9.1.2",
     "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "expo-yarn-workspaces": "^1.2.1",
