--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -24,6 +24,7 @@
     "expo": "~39.0.2",
     "expo-av": "^9.1.2",
     "expo-font": "~8.3.0",
+    "expo-screen-orientation": "^3.1.0",
     "expo-status-bar": "~1.0.2",
     "expo-yarn-workspaces": "^1.2.1",
     "react": "16.13.1",
