--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/stack": "^5.12.8",
     "expo": "~39.0.2",
     "expo-av": "^9.1.2",
+    "expo-cli": "^4.4.7",
     "expo-font": "~8.3.0",
     "expo-screen-orientation": "^3.1.0",
     "expo-status-bar": "~1.0.2",
