chore(repo): set PUPPETEER_SKIP_CHROMIUM_DOWNLOAD with false

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,11 @@ jobs:
 
       - name: Use Node.js ${{ matrix.node_version }}
         uses: actions/setup-node@v1
+        env:
+          PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
         with:
           node-version: ${{ matrix.node_version }}
+          args: install
 
       - name: install puppeteer libraries
         run: |
