--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,7 +11,8 @@
     "start:development:watch": "tsnd -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
     "start:production": "node ../../dist/server/src/server.js",
     "test": "jest --passWithNoTests --no-cache --runInBand --detectOpenHandles --colors --forceExit",
-    "test:ci": "yarn test --coverage"
+    "test:ci": "yarn test --coverage",
+    "install:ci": "yarn install --fronzen-lockfile"
   },
   "dependencies": {
     "cors": "^2.8.5",
