--- a/package.json
+++ b/package.json
@@ -37,12 +37,16 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
     "@sucrase/jest-plugin": "^2.0.0",
+    "@types/chai": "^4.2.18",
     "@types/jest": "^26.0.19",
+    "@types/mocha": "^8.2.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
+    "chai": "^4.3.4",
     "jest": "^26.6.3",
     "lerna": "^3.22.1",
+    "mocha": "^9.0.0",
     "ts-jest": "^26.4.4",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-jest": "^0.0.1",
