--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,7 +11,8 @@
     "start:development:watch": "tsnd -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
     "start:production": "node ../../dist/server/src/server.js",
     "test": "jest --passWithNoTests --no-cache --runInBand --detectOpenHandles --colors --forceExit",
-    "test:ci": "yarn test --coverage",
+    "test:mocha": "mocha -r ts-node/register -r tsconfig-paths/register --timeout 10000 '__tests__/**/*.spec.ts'",
+    "test:ci": "yarn test:mocha --coverage",
     "install:ci": "yarn install --fronzen-lockfile"
   },
   "dependencies": {
@@ -28,9 +29,7 @@
     "@types/puppeteer": "^5.4.2",
     "@types/supertest": "^2.0.10",
     "sucrase": "^3.17.1",
-    "supertest": "^6.0.1",
-    "ts-node": "^9.1.1",
-    "ts-node-dev": "^1.0.0"
+    "supertest": "^6.0.1"
   },
   "private": true
 }
