--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
+    "@types/http-proxy": "^1.17.6",
     "@types/mongodb": "^3.6.3",
     "@types/puppeteer": "^5.4.2",
     "@types/supertest": "^2.0.10",
