chore(server): add test and test:ci with mocha

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,8 +11,8 @@
     "start:development:watch": "tsnd -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
     "start:production": "node ../../dist/server/src/server.js",
     "test:jest": "jest --passWithNoTests --no-cache --runInBand --detectOpenHandles --colors --forceExit",
-    "test": "mocha -r ts-node/register -r tsconfig-paths/register --timeout 0 '__tests__/unit/**/*.spec.ts'",
-    "test:ci": "yarn test --coverage",
+    "test": "mocha --config .mocharc.js",
+    "test:ci": "yarn test --config .mocharc-ci.js",
     "install:ci": "yarn install --fronzen-lockfile"
   },
   "dependencies": {
