chore(server): add lerna:test:ci instead only server test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
           PUPPETEER_DEBUG: 'false'
           CI: 'true'
         with:
-          args: yarn workspace @animes-united/server run test
+          args: yarn lerna:test:ci
 
   deploy-development:
     runs-on: ubuntu-latest
