--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/chai": "^4.2.18",
     "@types/jest": "^26.0.19",
     "@types/mocha": "^8.2.2",
+    "@types/sinon": "^10.0.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
@@ -48,6 +49,7 @@
     "jest": "^26.6.3",
     "lerna": "^3.22.1",
     "mocha": "^9.0.1",
+    "sinon": "^11.1.1",
     "ts-jest": "^26.4.4",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-jest": "^0.0.1",
