chore(server): add script to run mocha on watch mode

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,6 +12,7 @@
     "start:production": "node ../../dist/server/src/server.js",
     "test:jest": "jest --passWithNoTests --no-cache --runInBand --detectOpenHandles --colors --forceExit",
     "test": "mocha --config .mocharc.js",
+    "test:watch": "yarn test --watch",
     "test:ci": "yarn test --config .mocharc-ci.js",
     "install:ci": "yarn install --fronzen-lockfile"
   },
