chore(mocha-staged): fix extension .tsx  -> .ts

--- a/packages/shared/mocha-staged/tsconfig.json
+++ b/packages/shared/mocha-staged/tsconfig.json
@@ -12,7 +12,7 @@
     "strictPropertyInitialization": false,
     "baseUrl": ".",
     "paths": {
-      "@src": ["./src/index.tsx"],
+      "@src": ["./src/index.ts"],
     }
   },
   "include": ["src/**/*", "__tests__/**/*"],
