--- a/packages/shared/mocha-staged/package.json
+++ b/packages/shared/mocha-staged/package.json
@@ -9,13 +9,11 @@
   "scripts": {
     "start:production": "node dist/app.js",
     "start:development": "ts-node -r tsconfig-paths/register src/app.ts",
-    "start:development:watch": "nodemon --watch src/**/* -e ts --exec ts-node ./src/index.ts",
+    "start:development:watch": "nodemon --watch src/**/* -e ts --exec ts-node ./src/app.ts",
     "test": "mocha --config .mocharc.js",
+    "test:ci": "mocha --config .mocharc-ci.js",
     "test:watch": "yarn test --watch",
     "build": "rimraf dist && sucrase ./src -d ./dist --transforms typescript,imports"
-  },
-  "dependencies": {
-    "@animes-united/mocha-staged": "*"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
