chore(mocha-staged): add scripts clean and permission-allowed
Too was added postinstall and preinstall scripts

--- a/packages/shared/mocha-staged/package.json
+++ b/packages/shared/mocha-staged/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@animes-united/mocha-staged",
   "version": "1.0.0",
-  "main": "dist/app.js",
+  "main": "index.js",
   "bin": {
     "mocha-staged": "dist/app.js"
   },
@@ -13,7 +13,11 @@
     "test": "mocha --config .mocharc.js",
     "test:ci": "mocha --config .mocharc-ci.js",
     "test:watch": "yarn test --watch",
-    "build": "rimraf dist && sucrase ./src -d ./dist --transforms typescript,imports"
+    "build": "sucrase ./src -d ./dist --transforms typescript,imports",
+    "clean": "rimraf dist",
+    "permission-allowed": "chmod 775 ../../../node_modules/.bin/mocha-staged",
+    "preinstall": "yarn clean",
+    "postinstall": "yarn build && yarn permission-allowed"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
