--- a/packages/shared/mocha-staged/package.json
+++ b/packages/shared/mocha-staged/package.json
@@ -17,7 +17,7 @@
     "clean": "rimraf dist",
     "permission-allowed": "chmod 775 ../../../node_modules/.bin/mocha-staged",
     "preinstall": "yarn clean",
-    "postinstall": "yarn build && yarn permission-allowed"
+    "postinstall": "yarn build"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
