--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -18,6 +18,8 @@
       "@entities/*": ["./src/entities/*"],
       "@entities": ["./src/entities/index.ts"],
       "@repositories": ["./src/repositories/index.ts"],
+      "@controllers": ["./src/controllers/index.ts"],
+      "@services": ["./src/services/index.ts"],
       "@repositories/*": ["./src/repositories/*"],
       "@providers": ["./src/providers/index.ts"],
       "@providers/*": ["./src/providers/*"],
