chore(server): add nodemon with ts-node

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,7 +8,7 @@
     "build:babel": "babel src --extensions \".js,.ts\" --out-dir ../../dist/server --copy-files --no-copy-ignored",
     "build": "rimraf dist && sucrase ./src -d ./dist --transforms typescript,imports",
     "start:development": "ts-node -r tsconfig-paths/register --transpile-only src/server.ts",
-    "start:development:watch": "tsnd -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
+    "start:development:watch": "nodemon -L",
     "start:production": "node ../../dist/server/src/server.js",
     "test:jest": "jest --passWithNoTests --no-cache --runInBand --detectOpenHandles --colors --forceExit",
     "test": "mocha --config .mocharc.js",
@@ -30,6 +30,7 @@
     "@types/mongodb": "^3.6.3",
     "@types/puppeteer": "^5.4.2",
     "@types/supertest": "^2.0.10",
+    "nodemon": "^2.0.9",
     "sucrase": "^3.17.1",
     "supertest": "^6.0.1",
     "ts-node": "^9.1.1",
