--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "seed:run": "yarn ts-node -r tsconfig-paths/register --transpile-only src/database/seeds/create_animes.ts",
     "build:babel": "babel src --extensions \".js,.ts\" --out-dir ../../dist/server --copy-files --no-copy-ignored",
     "build": "rimraf dist && sucrase ./src -d ./dist --transforms typescript,imports",
     "start:development": "ts-node -r tsconfig-paths/register --transpile-only src/server.ts",
