chore(repo): add dirty-chai and your types

--- a/package.json
+++ b/package.json
@@ -28,18 +28,19 @@
     "@animes-united/hash-generator": "*"
   },
   "devDependencies": {
-    "@animes-united/mocha-staged": "*",
     "@animes-united/eslint-config": "*",
     "@animes-united/husky-config": "*",
     "@animes-united/jest-config": "*",
     "@animes-united/lint-staged-config": "*",
     "@animes-united/lintcommit-config": "*",
+    "@animes-united/mocha-staged": "*",
     "@babel/cli": "^7.12.8",
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
     "@sucrase/jest-plugin": "^2.0.0",
     "@types/chai": "^4.2.18",
+    "@types/dirty-chai": "^2.0.2",
     "@types/jest": "^26.0.19",
     "@types/mocha": "^8.2.2",
     "@types/sinon": "^10.0.2",
@@ -47,6 +48,7 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
     "chai": "^4.3.4",
+    "dirty-chai": "^2.0.1",
     "jest": "^26.6.3",
     "lerna": "^3.22.1",
     "mocha": "^9.0.1",
