--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/preset-typescript": "^7.12.7",
     "@sucrase/jest-plugin": "^2.0.0",
     "@types/chai": "^4.2.18",
+    "@types/chai-as-promised": "^7.1.4",
     "@types/dirty-chai": "^2.0.2",
     "@types/jest": "^26.0.19",
     "@types/mocha": "^8.2.2",
@@ -48,6 +49,7 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
     "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "dirty-chai": "^2.0.1",
     "jest": "^26.6.3",
     "lerna": "^3.22.1",
