--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -26,6 +26,7 @@
       "@services": ["./src/services/index.ts"],
       "@repositories/*": ["./src/repositories/*"],
       "@providers": ["./src/providers/index.ts"],
+      "@routes": ["./src/routes/index.ts"],
       "@providers/*": ["./src/providers/*"],
       "@common/*": ["./src/common/*"],
       "@errors/*": ["./src/errors/*"]
