--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -17,37 +17,41 @@
     "@expo-google-fonts/poppins": "^0.1.0",
     "@expo-google-fonts/roboto": "^0.1.0",
     "@expo-google-fonts/ubuntu": "^0.1.0",
-    "@expo/vector-icons": "^10.0.0",
+    "@expo/ngrok": "^4.1",
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
-    "expo": "~39.0.2",
-    "expo-av": "^9.1.2",
-    "expo-cli": "^4.4.7",
-    "expo-font": "~8.3.0",
-    "expo-screen-orientation": "^3.1.0",
-    "expo-status-bar": "~1.0.2",
-    "expo-yarn-workspaces": "^1.2.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-gesture-handler": "~1.7.0 ",
-    "react-native-reanimated": "^1.13.2",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1 ",
-    "react-native-svg": "^12.1.0",
+    "expo": "^45.0.0",
+    "expo-av": "~11.2.3",
+    "expo-cli": "5.0.2",
+    "expo-font": "~10.1.0",
+    "expo-screen-orientation": "~4.2.0",
+    "expo-splash-screen": "~0.15.1",
+    "expo-status-bar": "~1.3.0",
+    "expo-yarn-workspaces": "^2.0.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "~0.13.12",
-    "styled-components": "^5.2.1"
+    "react-native-web": "0.17.7",
+    "styled-components": "^5.2.1",
+    "typescript": "^4.7.4",
+    "typescript-language-server": "^0.11.2"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.2",
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-dom": "~17.0.11",
+    "@types/react-native": "~0.67.6",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/styled-components-react-native": "^5.1.0",
-    "babel-preset-expo": "^8.3.0",
+    "babel-preset-expo": "~9.1.0",
     "react-native-svg-transformer": "^0.14.3"
   },
   "private": true
