chore(server): adjust paths mapping

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -6,7 +6,7 @@
   "compilerOptions": {
     "target": "es2017",
     "lib": ["DOM", "DOM.Iterable", "ES6", "es2017"],
-    "outDir": "../../dist/server",
+    "outDir": "dist/server",
     "rootDirs": ["./src", "./__tests__"],
     "removeComments": true,
     "experimentalDecorators": true,
@@ -16,20 +16,17 @@
     "baseUrl": ".",
     "paths": {
       "@adapters/*": ["./src/adapters/*"],
-      "@adapters": ["./src/adapters/index.ts"],
-      "@useCases/*": ["./src/useCases/*"],
-      "@middlewares": ["./src/middlewares/index.ts"],
-      "@entities/*": ["./src/entities/*"],
-      "@entities": ["./src/entities/index.ts"],
-      "@repositories": ["./src/repositories/index.ts"],
-      "@controllers": ["./src/controllers/index.ts"],
-      "@services": ["./src/services/index.ts"],
-      "@repositories/*": ["./src/repositories/*"],
-      "@providers": ["./src/providers/index.ts"],
-      "@routes": ["./src/routes/index.ts"],
-      "@providers/*": ["./src/providers/*"],
-      "@common/*": ["./src/common/*"],
-      "@errors/*": ["./src/errors/*"]
+      "@middlewares/*": ["./src/middlewares/*.ts"],
+      "@entities/*": ["./src/entities/*.ts"],
+      "@repositories/*": ["./src/repositories/*.ts"],
+      "@controllers/*": ["./src/controllers/*.ts"],
+      "@services/*": ["./src/services/*.ts"],
+      "@repositories/*": ["./src/repositories/*.ts"],
+      "@providers/*": ["./src/providers/*.ts"],
+      "@routes/*": ["./src/routes/*.ts"],
+      "@providers/*": ["./src/providers/*.ts"],
+      "@common/*": ["./src/common/*.ts"],
+      "@errors/*": ["./src/errors/*.ts"]
     }
   },
   "include": ["src/**/*", "__tests__/**/*"],
