--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,24 +2,43 @@
   "extends": "../../babel.config.js",
   "name": "@animes-united/server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/server.js",
   "license": "MIT",
   "scripts": {
+    "build": "rimraf dist && sucrase ./src -d ./dist --transforms typescript,imports",
+    "start": "node ./dist/server.js",
+    "start:development:watch": "nodemon -L",
+    "test:unit": "mocha --config .mocharc.js",
     "seed:run": "yarn ts-node -r tsconfig-paths/register --transpile-only src/database/seeds/create_animes.ts",
     "build:babel": "babel src --extensions \".js,.ts\" --out-dir ../../dist/server --copy-files --no-copy-ignored",
-    "build": "rimraf dist && sucrase ./src -d ./dist --transforms typescript,imports",
     "start:development": "ts-node -r tsconfig-paths/register --transpile-only src/server.ts",
-    "start:development:watch": "nodemon -L",
-    "start:production": "node ../../dist/server/src/server.js",
-    "test": "mocha --config .mocharc.js",
     "test:watch": "yarn test --watch",
-    "install:ci": "yarn install --fronzen-lockfile"
+    "install:ci": "yarn install --fronzen-lockfile",
+    "postbuild": "link-module-alias",
+    "prebuild": "rimraf ./dist && command -v link-module-alias && link-module-alias clean || true"
+  },
+  "_moduleAliasIgnoreWarning": true,
+  "_moduleAliases": {
+    "@database": "./dist/database",
+    "@adapters": "./dist/adapters",
+    "@middlewares": "./dist/middlewares",
+    "@entities": "./dist/entities",
+    "@repositories": "./dist/repositories",
+    "@controllers": "./dist/controllers",
+    "@services": "./dist/services",
+    "@providers": "./dist/providers",
+    "@routes": "./dist/routes",
+    "@common": "./dist/common",
+    "@errors": "./dist/errors",
+    "@app": "./dist/app.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "link-module-alias": "^1.2.0",
+    "module-alias": "^2.2.2",
     "mongodb": "^3.6.3",
     "puppeteer": "^5.5.0"
   },
